k8s/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-proxy
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: librak8s-react-svc.front.svc.cluster.local
  ports:
    - port: 80

---
# Proxy vers le back (namespace back)
apiVersion: v1
kind: Service
metadata:
  name: back-proxy
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: librak8s-api-svc.back.svc.cluster.local
  ports:
    - port: 80

---
# L'Ingress utilise ces proxies
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librak8s-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: back-proxy
                port:
                  number: 80

          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: front-proxy
                port:
                  number: 80
